# Cache-Simulator

./: CMakeLists.txt  README.md  run_simulator.sh  sample_config.yaml
include/: cache.hpp  line.hpp  memory.hpp  memory_subsystem.hpp  page.hpp
include/cache/: cache.hpp  cache_info.hpp  cache_line.hpp
include/memory/: memory.hpp  memory_info.hpp  memory_line.hpp  page.hpp
src/: cache.cpp  line.cpp  main.cpp  memory.cpp  memory_subsystem.cpp  page.cpp
src/cache/: cache.cpp  cache_line.cpp
src/memory/: memory.cpp  memory_line.cpp  page.cpp
test/: run_all_tests.sh  sample_trace.txt  trace.txt
test/test-01/: config.yaml  trace.txt
test/test-02/: config.yaml  trace.txt
test/test-03/: config.yaml  trace.txt
test/test-04/: config.yaml  trace.txt
test/test-05/: config.yaml  trace.txt
test/test-06/: config.yaml  trace.txt
test/test-07/: config.yaml  trace.txt
test/test-08/: config.yaml  trace.txt
test/test-09/: config.yaml
test/test-10/: config.yaml  trace.txt
test/test-11/: config.yaml
test/test-12/: config.yaml  trace.txt
test/test-13/: config_a.yaml  config_b.yaml  trace.txt
test/test-14/: config.yaml  trace.txt
test/test-15/: config.yaml  trace.txt
test/test-16/: config.yaml  trace.txt
test/test-17/: config.yaml  trace.txt
test/test-18/: config.yaml  trace.txt
test/test-19/: config.yaml  trace.txt
test/test-20/: config.yaml  trace.txt
test/test-21/: config.yaml  trace.txt
test/test-22/: config.yaml  trace.txt
test/test-23/: config.yaml
test/test-24/: config.yaml  trace.txt
test/test-25/: config.yaml  trace.txt
(+48 files in other folders)
